--- a/index.html
+++ b/index.html
@@ -1892,7 +1892,7 @@ async function handleCredentialResponse(resp){
     bootstrapApp(); // muat data awal
 
     // Tambah 3 baris ini
-    location.hash = '#sejarah';
+    location.hash = '#dashboard';
     const dashLink = document.querySelector('.nav-link[href="#dashboard"]');
     if (dashLink) dashLink.click();
 
@@ -2050,7 +2050,7 @@ function toast(title, message, variant = 'primary') {
 
   const cleanup = () => {
     window.removeEventListener('resize', onResize);
-    /* row kept: el.remove(); */
+    el.remove();
   };
 
   try {
@@ -2190,7 +2190,7 @@ async function sendWhatsAppReportImageFlow(msisdn) {
   const url = URL.createObjectURL(blob);
   const a = document.createElement('a');
   a.href = url; a.download = `laporan_nadi_${Date.now()}.png`;
-  document.body.appendChild(a); a.click(); /* row kept: a.remove(); */ URL.revokeObjectURL(url);
+  document.body.appendChild(a); a.click(); a.remove(); URL.revokeObjectURL(url);
   toast('Makluman', 'Imej dimuat turun. Lampirkan imej itu dalam chat WhatsApp dan hantar.', 'warning');
 }
 
@@ -2641,7 +2641,7 @@ async function daftarFromExcel(rowId, encNama, encIC, msisdn, encAlamat){
     }, { msg:'Mendaftar pesakit…' });
     if (res.status==='success'){
       toast('Berjaya',`Pesakit ${nama} didaftarkan ke TCA`, 'success');
-      /* row kept: tr.remove(); */
+      tr.remove();
       loadDashboardData(); loadTCACallData();
     } else throw new Error(res.message||'Gagal daftar');
   }catch(e){ toast('Ralat',e.message,'danger'); }
@@ -2655,7 +2655,7 @@ let nadiRows = []; // Array to store all NADI rows data
 
 function setupNADI(){
   const container = document.getElementById('nadiContainer');
-  /* kept rows: disabled clear */
+  container.innerHTML = '';
   addNadiRow();
   document.getElementById('btnNadiExportCsv').addEventListener('click', exportNadiCSV);
 
@@ -3053,7 +3053,7 @@ function addNadiRow(){
   // Buang
   row.querySelector('.nadi-buang').addEventListener('click', () => {
     if (confirm('Adakah anda pasti ingin membuang baris ini?')) {
-      /* row kept: row.remove(); */
+      row.remove();
       updateNadiRowNumbers();
       updateNadiSummary();
     }
@@ -3391,7 +3391,7 @@ async function exportNadiCSV() {
     href: url,
     download: `aktiviti_program_${programDate}.csv`
   });
-  document.body.appendChild(a); a.click(); /* row kept: a.remove(); */ URL.revokeObjectURL(url);
+  document.body.appendChild(a); a.click(); a.remove(); URL.revokeObjectURL(url);
   toast('Export','Fail CSV dimuat turun','success');
 }
 
@@ -4274,7 +4274,7 @@ async function daftarPesakit(){
       a.download = `pesakit_selesai_${new Date().toISOString().slice(0,10)}.csv`;
       document.body.appendChild(a);
       a.click();
-      /* row kept: a.remove(); */
+      a.remove();
       URL.revokeObjectURL(url);
 
       toast('Export', 'CSV selesai dimuat turun', 'success');
@@ -4623,7 +4623,7 @@ const saveNadiStateDebounced = debounce(saveNadiState, 400);
 
       // Buang baris voucher dari jadual sebelum simpan aktiviti rasmi, supaya tidak dihitung sebagai "layak"
       document.querySelectorAll('#nadiContainer tr').forEach(tr=>{
-        if (tr.querySelector('input[name="voucher"]')?.checked) /* row kept: tr.remove(); */
+        if (tr.querySelector('input[name="voucher"]')?.checked) tr.remove();
       });
       saveNadiState();
     }
@@ -5005,7 +5005,7 @@ if (btn) {
       const res = await getJSON({ action:'getNadiLive', sessionId }, { silent:false });
       const container = document.getElementById('nadiContainer');
       if (!container) return;
-      /* kept rows: disabled clear */
+      container.innerHTML = '';
       // Reset row counter if defined
       if (typeof nadiRowCounter !== 'undefined') { nadiRowCounter = 0; }
       if (res && res.status==='success' && Array.isArray(res.items)){
@@ -5044,7 +5044,7 @@ if (btn) {
           row.firstElementChild?.appendChild(badge);
         }
       } else if (badge){
-        /* row kept: badge.remove(); */
+        badge.remove();
       }
     });
   }
@@ -5731,7 +5731,7 @@ if (btn) {
     a.download = `export_${title}_${new Date().toISOString().slice(0,10)}.csv`;
     document.body.appendChild(a);
     a.click();
-    setTimeout(()=>{ URL.revokeObjectURL(url); /* row kept: a.remove(); */ }, 0);
+    setTimeout(()=>{ URL.revokeObjectURL(url); a.remove(); }, 0);
   }
 
   // ===== Feed Poll =====
@@ -6119,7 +6119,7 @@ if (btn) {
       if (!confirm('Padam peserta ini daripada aktiviti? Tindakan ini tidak boleh diundur.')) return;
       const res = await postForm({ action:'deleteNadiParticipant', activityId, no }, { msg:'Memadam peserta…' });
       if (!res || res.status!=='success') throw new Error(res && (res.message||res.code)||'Gagal padam');
-      /* row kept: tr.remove(); */
+      tr.remove();
       toast('Peserta telah dipadam');
     }catch(e){
       console.error(e);
@@ -6335,7 +6335,7 @@ function injectTelahHadirButtons(){
       if (res?.status!=='success') throw new Error(res?.message||res?.code||'Gagal padam kekal');
       _toast('Pesakit dipadam kekal');
       const tr = document.querySelector('#archiveTable tr[data-ic="'+ic+'"]');
-      if (tr) /* row kept: tr.remove(); */
+      if (tr) tr.remove();
       if (!document.querySelector('#archiveTable tr')){ 
         const row = document.createElement('tr'); 
         row.innerHTML = '<td colspan="8" class="text-center text-muted">Tiada rekod arkib</td>'; 
@@ -6701,7 +6701,7 @@ function __toVoucherPayload(payload){
     }catch(e){}
   }
   function unmountLoader(where){
-    try{ if (where && where.__loaderMounted){ /* row kept: where.__loaderMounted.remove(); */ where.__loaderMounted=null; } }catch(e){}
+    try{ if (where && where.__loaderMounted){ where.__loaderMounted.remove(); where.__loaderMounted=null; } }catch(e){}
   }
   function programListPane(){
     return byId('programList') || q('#programListContainer') || q('[data-role="program-list"]') || q('#sejarahCard .card-body');
@@ -6826,7 +6826,7 @@ function __toVoucherPayload(payload){
     }catch(e){}
   }
   function unmountLoader(where){
-    try{ if (where && where.__loaderMounted){ /* row kept: where.__loaderMounted.remove(); */ where.__loaderMounted=null; } }catch(e){}
+    try{ if (where && where.__loaderMounted){ where.__loaderMounted.remove(); where.__loaderMounted=null; } }catch(e){}
   }
 
   async function loadSejarahOnce(){
@@ -7174,228 +7174,31 @@ function __toVoucherPayload(payload){
 </script>
 
 
-    <script>
-    (function(){
-      window.refreshSejarahAfterSave = async function(){
-        try {
-          const sec = document.getElementById('sejarahSaringanSection') || document.querySelector('[data-view="sejarah"]');
-          if (!sec) return;
-          if (typeof loadSejarahSaringan === 'function') {
-            await loadSejarahSaringan();
-          } else if (typeof loadSejarah === 'function') {
-            await loadSejarah();
-          }
-        } catch(e) {}
-      };
-    })();
-    </script>
-    
-
-<!-- Sejarah Search + Autosort Patch (non-intrusive) -->
-<script id="sejarahSearchPatchV2">
+<!-- Auto-open Sejarah after sign-in (patch) -->
+<script>
 (function(){
-  'use strict';
-  if (window.__SEJARAH_SEARCH_PATCH_V2__) return;
-  window.__SEJARAH_SEARCH_PATCH_V2__ = true;
-
-  function $(sel, root){ return (root||document).querySelector(sel); }
-  function $all(sel, root){ return Array.from((root||document).querySelectorAll(sel)); }
-  function debounce(fn, ms){
-    let t; return function(){ clearTimeout(t); const args=arguments, ctx=this; t=setTimeout(()=>fn.apply(ctx,args), ms); };
-  }
-  function text(el){
-    return (el ? (el.innerText || el.textContent || '') : '').trim();
-  }
-  function lower(s){ return String(s||'').toLowerCase(); }
-  function digits(s){ return String(s||'').replace(/\D+/g,''); }
-
-  const tbodySel = '#sejarahTable';
-  const inputSel = '#sejarahSearch';
-
-  const state = {
-    rows: [],             // [{tr, cells, name, ic, phone, addr, status, staff, tca, remark, icDigits, phoneDigits, index}]
-    origOrder: [],        // original <tr> order for restore
-    origHtml: null,
-    lastQuery: '',
-    building: false
-  };
-
-  function collectRows(){
-    const tb = $(tbodySel);
-    if (!tb) return;
-    const trs = $all(':scope > tr', tb);
-    const rows = [];
-    let idx = 0;
-    for (const tr of trs){
-      const tds = $all('td', tr);
-      if (tds.length < 5) continue; // skip placeholder rows
-      // Expected columns: 0:#, 1:Nama, 2:IC, 3:Telefon, 4:Alamat, 5:Status, 6:BP, 7:PR, 8:DXT, 9:BMI, 10:TCA, 11:Staff, 12:Remark
-      const name   = lower(text(tds[1]));
-      const ic     = lower(text(tds[2]));
-      const phone  = lower(text(tds[3]));
-      const addr   = lower(text(tds[4] || ''));
-      const status = lower(text(tds[5] || ''));
-      const tca    = lower(text(tds[10] || ''));
-      const staff  = lower(text(tds[11] || ''));
-      const remark = lower(text(tds[12] || ''));
-      rows.push({
-        tr, cells: tds, name, ic, phone, addr, status, tca, staff, remark,
-        icDigits: digits(ic), phoneDigits: digits(phone),
-        index: idx++
-      });
-    }
-    state.rows = rows;
-    state.origOrder = rows.map(r => r.tr);
-  }
-
-  function setNoMatchRow(show){
-    const tb = $(tbodySel);
-    if (!tb) return;
-    let row = $('#sejarahNoMatchRow');
-    if (show){
-      if (!row){
-        const colSpan = ($all('thead th', tb.closest('table')) || []).length || 13;
-        row = document.createElement('tr');
-        row.id = 'sejarahNoMatchRow';
-        const td = document.createElement('td');
-        td.colSpan = colSpan;
-        td.className = 'text-center text-muted py-3';
-        td.textContent = 'Tiada padanan carian.';
-        row.appendChild(td);
-      }
-      // remove all normal rows from view; then show the message row
-      $all(':scope > tr', tb).forEach(tr => tr.remove());
-      tb.appendChild(row);
-    } else {
-      if (row) row.remove();
-    }
-  }
-
-  function renumber(){
-    // Set sequential numbers for visible rows
-    let no = 1;
-    for (const r of state.rows){
-      if (r.tr.parentElement){
-        if (r.cells[0]) r.cells[0].textContent = String(no++);
+  try{
+    var already = false;
+    function openSejarahIfSignedIn(){
+      if (already) return;
+      var tok = '';
+      try { tok = (window.ID_TOKEN || localStorage.getItem('id_token') || localStorage.getItem('ID_TOKEN') || '').trim(); } catch(e){}
+      if (tok){
+        already = true;
+        if (!location.hash || location.hash === '#dashboard' || location.hash === '#'){
+          location.hash = '#sejarah';
+        }
+        setTimeout(function(){ window.dispatchEvent(new HashChangeEvent('hashchange')); }, 50);
       }
     }
-  }
-
-  function scoreRow(r, tokens){
-    if (!tokens.length) return 0;
-    let score = 0;
-    for (const tok of tokens){
-      if (!tok) continue;
-      const t = lower(tok);
-      const td = digits(tok);
-      let hit = false;
-
-      // Strong matches (IC / phone digit contains)
-      if (td && td.length >= 3){
-        if (r.icDigits.indexOf(td) >= 0) { score += 220; hit = true; }
-        else if (r.phoneDigits.indexOf(td) >= 0) { score += 150; hit = true; }
-      }
-
-      // Name
-      if (r.name.startsWith(t))        { score += 160; hit = true; }
-      else if (r.name.indexOf(t) >= 0) { score += 100; hit = true; }
-
-      // IC / Phone textual
-      if (!hit && r.ic.indexOf(t) >= 0){ score += 120; hit = true; }
-      if (!hit && r.phone.indexOf(t) >= 0){ score += 100; hit = true; }
-
-      // Address / status / staff / remark / tca
-      if (!hit && r.addr.indexOf(t) >= 0){ score += 40; hit = true; }
-      if (!hit && r.status.indexOf(t) >= 0){ score += 35; hit = true; }
-      if (!hit && r.staff.indexOf(t) >= 0){ score += 32; hit = true; }
-      if (!hit && r.remark.indexOf(t) >= 0){ score += 25; hit = true; }
-      if (!hit && r.tca.indexOf(t) >= 0){ score += 20; hit = true; }
-
-      if (!hit) return -1e9; // token not found anywhere -> filter out
-    }
-    return score;
-  }
-
-  function applyFilterSort(q){
-    const tb = $(tbodySel);
-    if (!tb) return;
-
-    const query = (q||'').trim();
-    state.lastQuery = query;
-
-    // Clear "no match" row if any
-    setNoMatchRow(false);
-
-    if (!query){
-      // restore original order and show all
-      $all(':scope > tr', tb).forEach(tr => tr.remove());
-      for (const tr of state.origOrder) tb.appendChild(tr);
-      renumber();
-      return;
-    }
-
-    const tokens = query.split(/\s+/).map(s => s.trim()).filter(Boolean);
-    const items = [];
-    for (const r of state.rows){
-      const s = scoreRow(r, tokens);
-      if (s > -1e8) items.push({ s, r });
-    }
-
-    if (!items.length){
-      setNoMatchRow(true);
-      return;
-    }
-
-    // Sort by score desc, then name asc, then original index asc
-    items.sort((a,b) => {
-      if (b.s !== a.s) return b.s - a.s;
-      if (a.r.name !== b.r.name) return a.r.name.localeCompare(b.r.name, 'ms');
-      return a.r.index - b.r.index;
-    });
-
-    // Rebuild tbody with matched rows only
-    $all(':scope > tr', tb).forEach(tr => tr.remove());
-    for (const it of items) tb.appendChild(it.r.tr);
-    renumber();
-  }
-
-  const debouncedApply = debounce(applyFilterSort, 80);
-
-  function init(){
-    const tb = $(tbodySel);
-    const inp = $(inputSel);
-    if (!tb || !inp) return;
-
-    // Build initial cache
-    collectRows();
-
-    // Listen to input
-    inp.addEventListener('input', (e)=> {
-      debouncedApply(e.target.value || '');
-    });
-
-    // Observe changes to tbody to rebuild cache (e.g., when user selects different program)
-    const mo = new MutationObserver(debounce(function(muts){
-      // Avoid reacting to our own reorders frequently; rebuild cache cautiously
-      collectRows();
-      if (state.lastQuery) applyFilterSort(state.lastQuery);
-    }, 120));
-    mo.observe(tb, { childList: true, subtree: false });
-
-    // Also if page becomes visible later, ensure cache
-    document.addEventListener('visibilitychange', function(){
-      if (document.visibilityState === 'visible'){
-        collectRows();
-        if (state.lastQuery) applyFilterSort(state.lastQuery);
-      }
-    });
-  }
-
-  if (document.readyState === 'loading') {
-    document.addEventListener('DOMContentLoaded', init);
-  } else {
-    init();
-  }
+    openSejarahIfSignedIn();
+    var iv = setInterval(function(){
+      if (already) { clearInterval(iv); return; }
+      openSejarahIfSignedIn();
+    }, 400);
+    setTimeout(function(){ clearInterval(iv); }, 8000);
+    window.addEventListener('auth:ready', openSejarahIfSignedIn);
+  }catch(e){}
 })();
 </script>
 
