--- a/index.html
+++ b/index.html
@@ -2262,6 +2262,7 @@ function setupNavigation(){
       else if (target==='#nadi'){ /* no-op */ }
       else if (target==='#daftar-peka'){ /* no-op */ }
       else if (target==='#kelayakan'){ /* no-op */ }
+      else if (target==='#sejarah'){ try{ loadPrograms(); }catch(e){} }
       else if (target==='#tca-call'){ loadTCACallPage(); }
       else if (target==='#first-visit'){ loadFirstVisitData(); }
       else if (target==='#lab-followup'){ loadLabFollowUp(); }
